--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
                 <div id="acc-port-body" class="panel-collapse collapse in">
                   <div class="panel-body">
                     <div class="port-row">
+                      <input type="file" @change="importFileChanged" id="input-file" style="display: none" />
                       <div class="btn-group" role="group">
                         <button type="button" class="btn btn-primary" data-target="#download-js-modal" data-toggle="modal" @click="useTheme()">
                           <span class="glyphicon glyphicon-download-alt"></span>
@@ -500,7 +501,7 @@
                   <div role="tabpanel" class="tab-pane active" id="modal-js">
                     <ol id="how-to-use-js">
                       <li>下载或复制以下的主题保存至 <code>*.js</code> 文件；</li>
-                      <li>将该 JS 在 HTML 中引用；</li>
+                      <li>将该文件在 HTML 中引用；</li>
                       <li>使用 <code>echarts.init(dom, '{{ themeName || 'customed' }}')</code> 创建图表，第二个参数即为 <code>*.js</code> 文件中注册的主题名字。</li>
                     </ol>
                     <div class="code-btn">
