--- a/app/index.html
+++ b/app/index.html
@@ -555,7 +555,7 @@
     <script src="vendors/FileSaver.min.js"></script>
     <script src="vendors/echarts.min.js"></script>
     <script src="vendors/highlight.pack.js"></script>
-    <!-- <script src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script> -->
+    <script src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script>
 
     <script src="scripts/components.js"></script>
     <script src="scripts/options.js"></script>
