uglify js and css files

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="http://echarts.baidu.com/images/favicon.png">
-    <link rel="stylesheet" href="vendors/highlight.github.css">
     <link rel="stylesheet" href="styles/main.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -575,18 +574,9 @@
 
     </div>
 
-    <script src="vendors/lodash.min.js"></script>
-    <script src="vendors/jquery.min.js"></script>
-    <script src="vendors/bootstrap.min.js"></script>
-    <script src="vendors/bootstrap-colorpicker.min.js"></script>
-    <script src="vendors/vue.min.js"></script>
-    <script src="vendors/FileSaver.min.js"></script>
     <script src="vendors/echarts.min.js"></script>
-    <script src="vendors/highlight.pack.js"></script>
-    <script src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script>
+    <script src="vendors/vendors.min.js"></script>
 
-    <script src="scripts/components.js"></script>
-    <script src="scripts/options.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/app.min.js"></script>
   </body>
 </html>
