hide bg color of chat, and use it for container useful for dark bg

--- a/app/index.html
+++ b/app/index.html
@@ -465,7 +465,7 @@
 
           </div><!-- end of left -->
 
-          <div class="col-md-9 col-sm-8 chart-container scroll-content">
+          <div class="col-md-9 col-sm-8 chart-container scroll-content" v-bind:style="{ backgroundColor: theme.backgroundColor }">
 
             <h3>示例预览</h3>
 
