--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
         <div class="row scroll-parent">
           <div class="col-md-3 col-sm-4 theme-config">
 
-            <div id="acc-axis" class="panel-group">
+            <div id="acc-port" class="panel-group">
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
@@ -467,7 +467,7 @@
 
           <div class="col-md-9 col-sm-8 chart-container scroll-content" v-bind:style="{ backgroundColor: theme.backgroundColor }">
 
-            <h3>示例预览</h3>
+            <h3 v-bind:style="{ color: theme.titleColor }">示例预览</h3>
 
             <div class="row">
               <div v-for="i in [1,2,3,4,5,6,7,8,9,10,11,12,13,14]" class="ec-container col-md-6">
