--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,18 @@
                         </div>
                       </div>
                     </form>
+                    <form class="form-horizontal">
+                      <hr />
+                      <h5>默认方案</h5>
+                      <div class="row theme-plan-row">
+                        <div class="col-xs-6" v-for="group in preDefinedThemes">
+                          <a class="theme-plan-group"@click="selectPreDefinedTheme($index)" v-bind:style="{ backgroundColor: group.background }" title="{{ group.name }}">
+                            <div class="theme-plan-color" v-for="color in group.theme" v-bind:style="{ backgroundColor: color }">
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </form>
                   </div>
                 </div>
               </div>
