--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,8 @@
                 <li><a href="http://echarts.baidu.com/download.html">下载</a></li>
                 <li><a href="http://echarts.baidu.com/builder.html">在线构建</a></li>
                 <li><a href="http://echarts.baidu.com/download-map.html">地图</a></li>
-                <li><a href="http://echarts.baidu.com/download-theme.html">主题</a></li>
+                <li><a href="http://echarts.baidu.com/download-theme.html">主题下载</a></li>
+                <li><a href="http://echarts.baidu.com/theme-builder/">主题构建</a></li>
               </ul>
             </li>
             <li id="nav-github"><a href="https://github.com/ecomfe/echarts" target="_blank">GitHub</a></li>
