debounce background and title color

--- a/app/index.html
+++ b/app/index.html
@@ -478,9 +478,9 @@
 
           </div><!-- end of left -->
 
-          <div class="col-md-9 col-sm-8 chart-container scroll-content" v-bind:style="{ backgroundColor: theme.backgroundColor }">
+          <div class="col-md-9 col-sm-8 chart-container scroll-content" v-bind:style="{ backgroundColor: chartDisplay.background }">
 
-            <h3 v-bind:style="{ color: theme.titleColor }">示例预览</h3>
+            <h3 v-bind:style="{ color: chartDisplay.title }">示例预览</h3>
 
             <div class="row">
               <div v-for="i in [1,2,3,4,5,6,7,8,9,10,11,12,13,14]" class="ec-container col-md-6">
