--- a/app/index.html
+++ b/app/index.html
@@ -65,12 +65,18 @@
                 <li><a href="http://echarts.baidu.com/changelog.html">Changelog</a></li>
               </ul>
             </li>
-            <li id="nav-examples"><a href="http://echarts.baidu.com/examples.html">实例</a></li>
+            <li id="nav-gallery" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">作品<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="http://echarts.baidu.com/examples.html">官方示例</a></li>
+                <li><a href="http://gallery.echartsjs.com/explore.html">Gallery</a></li>
+              </ul>
+            </li>
             <li id="nav-download" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">下载<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="http://echarts.baidu.com/download.html">下载</a></li>
                 <li><a href="http://echarts.baidu.com/builder.html">在线构建</a></li>
-                <li><a href="http://echarts.baidu.com/download-map.html">地图</a></li>
+                <li><a href="http://echarts.baidu.com/download-map.html">地图下载</a></li>
+                <li><a href="http://ecomfe.github.io/echarts-map-tool/">地图构建</a></li>
                 <li><a href="http://echarts.baidu.com/download-theme.html">主题下载</a></li>
                 <li><a href="http://echarts.baidu.com/theme-builder/">主题构建</a></li>
               </ul>
