--- a/app/index.html
+++ b/app/index.html
@@ -43,46 +43,49 @@
     <div id="main">
       <div class="container-fluid navbar-default">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="#echarts-navbar-collapse" aria-expanded="false" class="navbar-toggle collapsed">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a href="http://echarts.baidu.com/index.html" class="navbar-brand">
-            <img src="http://echarts.baidu.com/images/logo.png" alt="echarts logo" class="navbar-logo"/>
-          </a>
-          <a class="nav-title" href="#">主题在线构建工具</a>
+          <button type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false" class="navbar-toggle collapsed"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="http://echarts.baidu.com/index.html" class="navbar-brand"><img src="http://echarts.baidu.com/images/logo.png" alt="echarts logo" class="navbar-logo"/></a>
         </div>
-        <div id="echarts-navbar-collapse" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
+        <div id="navbar-collapse" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-left">
             <li id="nav-index"><a href="http://echarts.baidu.com/index.html">首页</a></li>
             <li id="nav-doc" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">文档<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="http://echarts.baidu.com/tutorial.html">教程</a></li>
                 <li><a href="http://echarts.baidu.com/api.html">API</a></li>
                 <li><a href="http://echarts.baidu.com/option.html">配置项手册</a></li>
-                <li><a href="http://echarts.baidu.com/changelog.html">Changelog</a></li>
-              </ul>
-            </li>
-            <li id="nav-gallery" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">作品<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="http://echarts.baidu.com/examples.html">官方示例</a></li>
-                <li><a href="http://gallery.echartsjs.com/explore.html">Gallery</a></li>
+                <li><a href="http://echarts.baidu.com/faq.html">常见问题</a></li>
+                <li><a href="http://echarts.baidu.com/changelog.html">版本记录</a></li>
+                <li><a href="http://echarts.baidu.com/feature.html">特性</a></li>
               </ul>
             </li>
             <li id="nav-download" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">下载<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="http://echarts.baidu.com/download.html">下载</a></li>
-                <li><a href="http://echarts.baidu.com/builder.html">在线构建</a></li>
-                <li><a href="http://echarts.baidu.com/download-map.html">地图下载</a></li>
-                <li><a href="http://ecomfe.github.io/echarts-map-tool/">地图构建</a></li>
+                <li><a href="http://echarts.baidu.com/download-extension.html">扩展下载</a></li>
                 <li><a href="http://echarts.baidu.com/download-theme.html">主题下载</a></li>
-                <li><a href="http://echarts.baidu.com/theme-builder/">主题构建</a></li>
+                <li><a href="http://echarts.baidu.com/download-map.html">地图下载</a></li>
               </ul>
             </li>
-            <li id="nav-github"><a href="https://github.com/ecomfe/echarts" target="_blank">GitHub</a></li>
+            <li id="nav-examples"><a href="http://echarts.baidu.com/examples.html" class="dropdown-toggle">实例</a></li>
+            <li id="nav-community"><a href="#" data-toggle="dropdown" class="dropdown-toggle">社区<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="http://gallery.echartsjs.com">GALLERY</a></li>
+                <li><a href="http://echarts.baidu.com">博客</a></li>
+              </ul>
+            </li>
+            <li id="nav-tool" class="active"><a href="#" data-toggle="dropdown" class="dropdown-toggle">工具<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="http://echarts.baidu.com/spreadsheet.html">表格工具</a></li>
+                <li><a href="http://ecomfe.github.io/echarts-map-tool/">地图数据在线工具</a></li>
+                <li><a href="http://echarts.baidu.com/theme-builder/">主题构建工具</a></li>
+              </ul>
+            </li>
+            <li id="nav-about"><a href="http://echarts.baidu.com/about.html">关于</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li id="nav-github"><a href="https://github.com/ecomfe/echarts" target="_blank"><img src="http://echarts.baidu.com/images/github.png" width="18"/></a></li>
             <li id="nav-2" class="0"><a href="http://echarts.baidu.com/echarts2/">2.0</a></li>
+            <li id="nav-homeen"><a href="https://ecomfe.github.io/echarts-doc/public/en/index.html">EN</a></li>
           </ul>
         </div>
       </div><!-- end of navbar -->
