--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
                 <li><a href="http://echarts.baidu.com/tutorial.html">教程</a></li>
                 <li><a href="http://echarts.baidu.com/api.html">API</a></li>
                 <li><a href="http://echarts.baidu.com/option.html">配置项手册</a></li>
+                <li><a href="http://echarts.baidu.com/option-gl.html">GL 配置项手册</a></li>
                 <li><a href="http://echarts.baidu.com/faq.html">常见问题</a></li>
                 <li><a href="http://echarts.baidu.com/changelog.html">版本记录</a></li>
                 <li><a href="http://echarts.baidu.com/feature.html">特性</a></li>
