--- a/app/index.html
+++ b/app/index.html
@@ -50,13 +50,13 @@
             <li id="nav-index"><a href="http://echarts.baidu.com/index.html">首页</a></li>
             <li id="nav-doc" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">文档<b class="caret"></b></a>
               <ul class="dropdown-menu">
+                <li><a href="http://echarts.baidu.com/feature.html">特性</a></li>
                 <li><a href="http://echarts.baidu.com/tutorial.html">教程</a></li>
                 <li><a href="http://echarts.baidu.com/api.html">API</a></li>
                 <li><a href="http://echarts.baidu.com/option.html">配置项手册</a></li>
                 <li><a href="http://echarts.baidu.com/option-gl.html">GL 配置项手册</a></li>
                 <li><a href="http://echarts.baidu.com/faq.html">常见问题</a></li>
                 <li><a href="http://echarts.baidu.com/changelog.html">版本记录</a></li>
-                <li><a href="http://echarts.baidu.com/feature.html">特性</a></li>
               </ul>
             </li>
             <li id="nav-download" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">下载<b class="caret"></b></a>
@@ -67,7 +67,13 @@
                 <li><a href="http://echarts.baidu.com/download-map.html">地图下载</a></li>
               </ul>
             </li>
-            <li id="nav-examples"><a href="http://echarts.baidu.com/examples.html" class="dropdown-toggle">实例</a></li>
+            <li id="nav-examples">
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">实例<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="{{ site.url_echarts }}/examples.html">官方实例</a></li>
+                    <li><a href="http://gallery.echartsjs.com/explore.html#tags=echarts-gl">GL 实例</a></li>
+                </ul>
+            </li>
             <li id="nav-community"><a href="#" data-toggle="dropdown" class="dropdown-toggle">社区<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="http://gallery.echartsjs.com">GALLERY</a></li>
