--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
             <li id="nav-examples">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">实例<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="{{ site.url_echarts }}/examples.html">官方实例</a></li>
+                    <li><a href="http://echarts.baidu.com/examples.html">官方实例</a></li>
                     <li><a href="http://gallery.echartsjs.com/explore.html#tags=echarts-gl">GL 实例</a></li>
                 </ul>
             </li>
