--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
             <li id="nav-community"><a href="#" data-toggle="dropdown" class="dropdown-toggle">社区<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="http://gallery.echartsjs.com">GALLERY</a></li>
-                <li><a href="http://echarts.baidu.com">博客</a></li>
+                <li><a href="http://efe.baidu.com/tags/ECharts/">博客</a></li>
               </ul>
             </li>
             <li id="nav-tool" class="active"><a href="#" data-toggle="dropdown" class="dropdown-toggle">工具<b class="caret"></b></a>
@@ -87,7 +87,12 @@
                 <li><a href="http://echarts.baidu.com/theme-builder/">主题构建工具</a></li>
               </ul>
             </li>
-            <li id="nav-about"><a href="http://echarts.baidu.com/about.html">关于</a></li>
+            <li id="nav-about"><a href="#" data-toggle="dropdown" class="dropdown-toggle">关于<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="http://echarts.baidu.com/about.html">关于我们</a></li>
+                <li><a href="https://github.com/ecomfe/echarts/blob/master/LICENSE">版权声明</a></li>
+              </ul>
+            </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li id="nav-github"><a href="https://github.com/ecomfe/echarts" target="_blank"><img src="http://echarts.baidu.com/images/github.png" width="18"/></a></li>
