--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,12 @@
                           <span class="glyphicon glyphicon-question-sign"></span>
                           帮助
                         </button>
+                            
+                        <a href="index_en.html">
+                          <button class="btn btn-default" data-toggle="modal">
+                          EN
+                          </button>
+                        </a>
                       </div>
                     </div>
                     <form class="form form-horizontal">
