--- a/app/index_en.html
+++ b/app/index_en.html
@@ -125,6 +125,11 @@
                           <span class="glyphicon glyphicon-question-sign"></span>
                           Help
                         </button>
+                        <a href="index.html">
+                          <button class="btn btn-default" data-toggle="modal">
+                          中文
+                          </button>
+                        </a>
                       </div>
                     </div>
                     <form class="form form-horizontal">
