--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,9 @@
           </a>
           <a class="nav-title" href="#" style="color: white; padding: 15px; display: inline-block;">主题在线构建工具</a>
         </div>
+        <div id="echarts-navbar-collapse" class="navbar-right">
+          <a href="index_en.html" class="navbar-brand">EN</a>
+        </div>
         <!-- <div id="echarts-navbar-collapse" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li id="nav-index"><a href="http://echarts.baidu.com/index.html">首页</a></li>
@@ -125,12 +128,6 @@
                           <span class="glyphicon glyphicon-question-sign"></span>
                           帮助
                         </button>
-                            
-                        <a href="index_en.html">
-                          <button class="btn btn-default" data-toggle="modal">
-                          EN
-                          </button>
-                        </a>
                       </div>
                     </div>
                     <form class="form form-horizontal">
